# TPU-VM-setup

./: .gitignore  CONTRIBUTING.md  GET_STARTED.md  README.md  apply_connect.sh  cancel.sh  clean.sh  config.sh  delete.sh  get_job_status.py  keys.sh  loop.sh  loop_run.sh  loop_terminate.sh  main.sh  pyproject.toml  requirements.txt  run.sh  run_command.sh  run_fms.sh  run_maxtext.sh  setup_conda.sh  setup_conda2.sh  setup_gcsfuse.sh  setup_main.sh  setup_maxtext.sh  setup_podrun.sh  setup_ssh.sh  start.sh  test.sh
configs/: example-v4.yaml  example-v5.yaml  example-v6.yaml  quick-start.yaml  template.yaml  v4-us-central2-b.yaml  v5-europe-west4-a.yaml  v6-europe-west4-a.yaml  v6-us-east1-d.yaml
dashboard/: dashboard.py  main.py
jobman/: cancel.py  clean.py  cli.py  command.py  create.py  gcsfuse.py  job.py  jobman.py  ssh.py  status.py  tpu.py  utils.py
jobman-legacy/: cli.py  command.py  status.py  tpu.py  utils.py
jobman-legacy/setup/: ssh.py
jobman/envs/: base.py  conda.py  docker.py  venv.py
jobman/profilers/: billing_report.py  quota_report.py  storage_report.py
jobman/setup/: conda.py  docker.py  gcsfuse.py  venv.py
lib/: get_ips.sh  request_vm.sh  run_w_docker.sh  setup_docker.sh  setup_gcsfuse.sh  setup_ssh.sh  write_meta.sh
my_tests/: test_create.sh
other_resources/slack_chatbot/: .gitignore  (+8 more)
profiler/: quota_report.py  storage_report.py
scripts/: example.sh  run_maxtext_llama3.1_4b_width_200B.sh  run_maxtext_llama3.1_4b_width_50B.sh  test_v4.sh  test_v5e.sh  test_v6e.sh  ultra_create_tpu.sh
tests/: fms_style_schedule.py  test_create.sh
