# pyproject.toml
[project]
name = "jobman"
version = "0.1.0"
description = "JOBMAN - TPU job manager"
authors = [{ name = "Yufeng Xu" }]
requires-python = ">=3.8"
dependencies = [
    "click", 
    "fastapi",
    "gcloud",
    "google-api-python-client", 
    "google-auth",
    "google-cloud-bigquery",
    "hydra-core", 
    "omegaconf", 
    "pydantic",
    "streamlit",
    "tabulate", 
    "tqdm", 
    "uvicorn",
    "yaspin"
]

[project.scripts]
jobman = "jobman.cli:cli"

[tool.setuptools]
packages = ["jobman"]